<resources>
    <string name="app_name">IQ APP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="continue_to_tasks">Continue</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tutorial_test">
        Remember it is accurate work that counts. Attempt each problem in turn.\n
        Do your best to find the correct piece to complete it before going on to the next problem.
        If you get stuck move on and come back to the problem later.
        But remember, in every case, the next problem is harder and it will take you longer to check your answer
        carefully.
    </string>
    <string name="tutorial_train">
        In Train mode you haven\'t time restrictions and you can see the result by using ANSWER button.
    </string>
    <string name="start">Start</string>
    <string name="button_go_to_end">Finish</string>
    <string name="resultView1">Passed tasks: %d\n Wow. You’re special!</string>
    <string name="resultView2">Passed tasks: %d\n It\'s good!</string>
    <string name="resultView3">Passed tasks: %d\n You can do better!</string>
    <string name="resultView4">Passed tasks: %d\n Don\'t worry! Train more!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_rate">RATE</string>
    <string name="button_share">SHARE</string>
    <string name="button_next">NEXT</string>
    <string name="button_result">RESULT</string>
    <string name="button_final">FINAL</string>
    <string name="button_answers">ANSWERS</string>
    <string name="button_home">HOME</string>
    <string name="ANSWER">ANSWER</string>
    <string name="button_train">TRAIN</string>
    <string name="action_rate">Rate</string>
    <string name="action_share">Share</string>
    <string name="text_view_choose">Choose number of tasks:</string>
    <string name="text_view_choose_and_difficulty">Choose number of tasks and difficulty:</string>
    <string name="normal">NORMAL</string>
</resources>