<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TutorialFragment">

    <Button
            android:id="@+id/button_continue_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_to_tasks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_tutorial" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.789"/>
    <TextView
            android:text="@string/tutorial_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text_view_tutorial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintHorizontal_bias="0.0" android:textSize="14sp"
            android:gravity="center"/>
    <SeekBar
            android:layout_width="250dp"
            android:layout_height="18dp" android:id="@+id/seek_bar_num_of_tasks"
            android:max="19"
            android:progress="9"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_tutorial"
            app:layout_constraintBottom_toTopOf="@+id/button_continue_tutorial"/>
    <TextView
            android:text="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text_view_num_of_tasks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintBottom_toTopOf="@+id/seek_bar_num_of_tasks"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/text_view_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text_view_choose"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_tutorial"
            app:layout_constraintBottom_toTopOf="@+id/text_view_num_of_tasks" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.523"/>
    <SeekBar
            android:layout_width="145dp"
            android:layout_height="24dp" android:id="@+id/seek_bar_difficulty"
            app:layout_constraintBottom_toTopOf="@+id/button_continue_tutorial"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.AppCompat.SeekBar.Discrete" android:progress="1" android:max="2"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar_num_of_tasks"/>
    <TextView
            android:text="@string/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text_view_difficulty"
            app:layout_constraintBottom_toTopOf="@+id/seek_bar_difficulty"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar_num_of_tasks" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>